--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             <!-- Projeto 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-2.png" class="card-img-top" alt="Imagem do projeto de IA">
+                    <img src="img/projeto-2.jpeg" class="card-img-top" alt="Imagem do projeto de IA">
                     <div class="card-body">
-                        <h5 class="card-title">Decidindo o Futuro: Uma Jornada Interativa sobre a Inteligência Artificial</h5>
-                        <p class="card-text">Este projeto é um jogo interativo baseado em navegador que explora o impacto e as implicações da Inteligência Artificial (IA) na sociedade, permitindo que as pessoas jogadoras façam escolhas que influenciam o desenrolar de uma narrativa sobre o futuro da IA.</p>
+                        <h5 class="card-title">Portifólio, Html e css</h5>
+                        <p class="card-text">Este projeto é uma atividade muito bem elaborada para aprender JavaScript</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">Veja o projeto</button>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
                     <p>O projeto consiste em uma aplicação web interativa, desenvolvida com HTML, CSS, e JavaScript, que simula uma experiência narrativa centrada no tema da Inteligência Artificial. O objetivo é engajar os jogadores em um cenário fictício que aborda o avanço da IA e suas possíveis consequências para a humanidade, destacando a importância da reflexão ética sobre a tecnologia.</p>
                     <p>O HTML estrutura o conteúdo da página, dividindo-o em seções como a tela inicial, caixa de perguntas, alternativas de resposta, e o resultado final baseado nas escolhas do jogador. O CSS é utilizado para estilizar a página, empregando um esquema de cores futurista e layout responsivo para melhorar a experiência do usuário. JavaScript é usado para adicionar interatividade ao jogo, manipulando o DOM para atualizar o conteúdo da página conforme as escolhas do jogador, e determinando o fluxo da narrativa através de uma série de perguntas e respostas.</p>
                     <p>Os scripts JavaScript incluem módulos para gerar nomes aleatórios, definir as perguntas e as lógicas de jogo, como iniciar o jogo, apresentar perguntas e alternativas, processar as escolhas dos jogadores, e exibir o resultado final. Este design modular facilita a manutenção e a expansão futura do jogo. A importância das ferramentas utilizadas (HTML, CSS, JavaScript) reside na criação de uma experiência interativa que não apenas entretém, mas também educa os jogadores sobre a complexidade ética e social da IA, incentivando a reflexão crítica sobre o papel da tecnologia em nossas vidas.</p>
-                    <img src="img/projeto-2.png" class="img-fluid w-100" alt="Imagem representativa do projeto de uma biblioteca online">
+                    <img src="img/projeto-2.jpeg" class="img-fluid w-100" alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
                     <a href="https://femascheti.github.io/tecnicas-computacionais-refletindo-sobre-ia/">Ver projeto ao vivo</a>
